jobs/job_60783810/uncert/errors/benchmark_239/solver_2.txt
INFO: Pointer analysis took 0 sec 0 ms
input.cc:29:7: warning: incompatible pointer to integer conversion initializing 'int' with an expression of type 'void *' [-Wint-conversion]
  int curr = NULL;
      ^      ~~~~
input.cc:44:12: warning: incompatible pointer to integer conversion assigning to 'int' from 'struct list *' [-Wint-conversion]
head_index = memory0[head_ptr];
           ^ ~~~~~~~~~~~~~~~~~
input.cc:45:7: error: use of undeclared identifier 'head'
  if (head == NULL) return;
      ^
input.cc:47:14: error: use of undeclared identifier 'head'
  int curr = head;
             ^
input.cc:48:28: warning: comparison between pointer and integer ('int' and 'void *') [-Wpointer-integer-compare]
  while(memory1[curr].next != NULL) {
        ~~~~~~~~~~~~~~~~~~ ^  ~~~~
input.cc:49:29: error: member reference type 'int' is not a pointer
    if (memory1[curr].next->value == m) {
        ~~~~~~~~~~~~~~~~~~  ^
input.cc:50:48: error: member reference type 'int' is not a pointer
      memory1[curr].next = memory1[curr].next->next;
                           ~~~~~~~~~~~~~~~~~~  ^
input.cc:56:15: error: use of undeclared identifier 'head'
  if (memory1[head].value == m) {
              ^
input.cc:57:5: error: use of undeclared identifier 'head'
    head = memory1[head].next;
    ^
input.cc:57:20: error: use of undeclared identifier 'head'
    head = memory1[head].next;
                   ^
input.cc:60:23: error: use of undeclared identifier 'head'
  memory0[head_ptr] = head;
                      ^
3 warnings and 8 errors generated.
VmxQ1_Ptr2Arr.c:29:7: warning: incompatible pointer to integer conversion initializing 'int' with an expression of type 'void *' [-Wint-conversion]
  int curr = NULL;
      ^      ~~~~
VmxQ1_Ptr2Arr.c:44:12: warning: incompatible pointer to integer conversion assigning to 'int' from 'struct list *' [-Wint-conversion]
head_index = memory0[head_ptr];
           ^ ~~~~~~~~~~~~~~~~~
VmxQ1_Ptr2Arr.c:45:7: error: use of undeclared identifier 'head'
  if (head == NULL) return;
      ^
VmxQ1_Ptr2Arr.c:47:14: error: use of undeclared identifier 'head'
  int curr = head;
             ^
VmxQ1_Ptr2Arr.c:56:15: error: use of undeclared identifier 'head'
  if (memory1[head].value == m) {
              ^
VmxQ1_Ptr2Arr.c:57:5: error: use of undeclared identifier 'head'
    head = memory1[head].next;
    ^
VmxQ1_Ptr2Arr.c:57:20: error: use of undeclared identifier 'head'
    head = memory1[head].next;
                   ^
VmxQ1_Ptr2Arr.c:60:23: error: use of undeclared identifier 'head'
  memory0[head_ptr] = head;
                      ^
2 warnings and 6 errors generated.
